--- a/studentadminportal-ui/src/app/students/view-student/view-student.component.css
+++ b/studentadminportal-ui/src/app/students/view-student/view-student.component.css
@@ -5,3 +5,20 @@
 .mat-form-field {
     width: 100%;
 }
+
+.image-container {
+    width: 180px;
+    height: 180px;
+    background-color: #F7f7f7;
+    border: 2px solid #CCC;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.image-container img {
+    width: 600px;
+    height: 350px;
+}
